--- a/index.html
+++ b/index.html
@@ -518,8 +518,9 @@ header, .context-menu, .megamenu-content, footer{
 </style>
 </head>
 <body class='typora-export os-windows' >
-<div  id='write'  class = 'is-node'><h4><a name="andys-random-movie-chooser" class="md-header-anchor"></a><span>Andy&#39;s Random Movie Chooser</span></h4><p>&nbsp;</p><h5><a name="1-enter-you-movie-or-anything-really-choices-below-one-at-a-time" class="md-header-anchor"></a><span>1. Enter you movie (or anything really) choices below one at a time</span></h5><h5><a name="2-once-you-have-completed-your-list-press-choose-your-movie" class="md-header-anchor"></a><span>2. Once you have completed your list, press &quot;Choose your movie&quot;</span></h5><h5><a name="3-enjoy-your-movie" class="md-header-anchor"></a><span>3. Enjoy your movie</span></h5></div>
+<div  id='write'  class = 'is-node'><h4><a name="andys-random-movie-chooser" class="md-header-anchor"></a><span>Andy&#39;s Random Movie Chooser</span></h4><p>&nbsp;</p><h5><a name="1-enter-you-movie-or-anything-really-choices-below-one-at-a-time" class="md-header-anchor"></a><span>1. Enter you movie (or anything really) choices below one at a time</span></h5><h5><a name="2-once-you-have-completed-your-list-press-choose-your-movie" class="md-header-anchor"></a><span>2. Once you have completed your list, press &quot;Choose your movie&quot;</span></h5><h5><a name="3-enjoy-your-movie" class="md-header-anchor"></a><span>3. Enjoy your movie</span></h5>
 <img src="popcorn.png" height="160" width="103" alt="logo"/>
+
 <input type="text" name="text" id="inputText"/>
 <button onclick="pushData();">add</button>
 <h4>Your Movie List</h4>
@@ -537,7 +538,7 @@ header, .context-menu, .megamenu-content, footer{
                 <hr>
                     <strong> <p id="demo"></p></strong>
             </div>
-
+        </div>
 
 </body>
 <script src="movieChooser.js" defer></script>
