--- a/index.html
+++ b/index.html
@@ -516,6 +516,7 @@ header, .context-menu, .megamenu-content, footer{
 
 
 </style>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body class='typora-export os-windows' >
 <div  id='write'  class = 'is-node'><h4><a name="andys-random-movie-chooser" class="md-header-anchor"></a>
@@ -542,6 +543,11 @@ header, .context-menu, .megamenu-content, footer{
                     <!--h1><span id="movie"></span><h1/-->
                     <strong><span id="movie"></span> </strong>
                 </h1>
+                <strong> <p id="outcome"></p></strong>
+                <p id="release"></p>
+                <p id="runtime"></p>
+                <img id="img" src="https://via.placeholder.com/150"    >
+   
                 <hr>
                     <strong> <p id="demo"></p></strong>
             </div>
