--- a/index.html
+++ b/index.html
@@ -517,6 +517,11 @@ header, .context-menu, .megamenu-content, footer{
 
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.6.2.min.js"></script>
+        <!--jQuery, linked from a CDN-->
+  
+   <script type="text/javascript" src="http://use.typekit.com/oya4cmx.js"></script>
+   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body class='typora-export os-windows' >
 <div  id='write'  class = 'is-node'><h4><a name="andys-random-movie-chooser" class="md-header-anchor"></a>
