--- a/index.html
+++ b/index.html
@@ -550,6 +550,7 @@ header, .context-menu, .megamenu-content, footer{
                 <strong> <p id="outcome"></p></strong>
                 <p id="release"></p>
                 <p id="runtime"></p>
+		<p id="ratings"></p>
                 <img id="img" src="https://via.placeholder.com/150"    >
    
                 <hr>
