--- a/gamev1/index.html
+++ b/gamev1/index.html
@@ -163,8 +163,8 @@
                       <h4 id="runtime" ></h4>
                       <h4 id="ratings" ></h4>
                       <!--fix dimensions and get better placeholder-->
-                      <img id="img" src="https://via.placeholder.com/150" width="640" height="360"  >
-        
+                      <img id="img" src="https://via.placeholder.com/150" class="specialImg"  >
+                      <img id="img0" src="https://via.placeholder.com/150" class="specialImg"  >
                       <hr>
                           <strong> <a id="demo" href=""></a></strong>
                   </div>
