--- a/gamev1/index.html
+++ b/gamev1/index.html
@@ -37,7 +37,7 @@
       <div class="container">
         
         <!-- change logo -->
-        <img src="img\controller.png" height="75"  alt="logo"/>
+        <!--img src="img\controller.png" height="45"  alt="logo"/-->
         <a class="navbar-brand js-scroll-trigger" href="index.html">Random game Chooser</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -135,7 +135,7 @@
  </section>  
  <section id = "chooser" class="chooser">
 <div  >
-  <img  class="mx-auto d-block" src="img\controller.png" height="160" width="103" alt="poppy"/>
+  <img  class="mx-auto d-block" src="img\controller-sml.png" class="specialImg"/>
 </div>
 
       <div class="col-lg-8 mx-auto text-center">
