--- a/gamev1/index.html
+++ b/gamev1/index.html
@@ -37,7 +37,7 @@
       <div class="container">
         
         <!-- change logo -->
-        <!--img src="img\controller.png" height="45"  alt="logo"/-->
+        <img src="img\popcorn.png" height="75"  alt="logo"/>
         <a class="navbar-brand js-scroll-trigger" href="index.html">Random game Chooser</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -135,7 +135,7 @@
  </section>  
  <section id = "chooser" class="chooser">
 <div  >
-  <img  class="mx-auto d-block" src="img\controller-sml.png" class="specialImg"/>
+  <img  class="mx-auto d-block" src="img/popcorn.png" height="160" width="103" alt="poppy"/>
 </div>
 
       <div class="col-lg-8 mx-auto text-center">
@@ -155,7 +155,7 @@
                     
                       <h4>Your randomly chosen game is:</h4>
                       <h1 class="text-uppercase">
-                          <!--h1><span id="movie">comment here </span><h1/-->
+                          <!--h1><span id="movie"></span><h1/-->
                           <strong><span id="movie"></span> </strong>
                       </h1>
                       <strong> <p id="outcome"></p></strong>
@@ -163,10 +163,15 @@
                       <h4 id="runtime" ></h4>
                       <h4 id="ratings" ></h4>
                       <!--fix dimensions and get better placeholder-->
-                      <img id="img" src="https://via.placeholder.com/150" class="specialImg"  >
-                      <img id="img0" src="https://via.placeholder.com/150" class="specialImg"  >
+                      <!--img id="img" src="https://via.placeholder.com/150" class="specialImg"-->
+                      <!--img id="img0" src="https://via.placeholder.com/150" class="specialImg"-->
+                      <a id="thumbnail1" class="specialImg">
+                      <a id="thumbnail2" class="specialImg">  
+                      </a>
                       <hr>
                           <strong> <a id="demo" href=""></a></strong>
+                      <hr>
+                      <strong> <a id="deal" href=""></a></strong>
                   </div>
               </div>
             </div>
